# etl

./: LICENSE  README.md  SPEC.md
connectors/csv/: .gitignore  README.md  config.jsonc  csv_connector.py  pyproject.toml  temp.py
connectors/csv/csv_connector/: main.py  models.py
connectors/csv/data/: contacts.csv  sample_input.jsonl
connectors/csv/tests/: customers.csv  test_csv_connector.py
connectors/iterable/: .gitignore  iterable_connector.py  pyproject.toml
connectors/iterable/iterable_connector/: main.py
connectors/iterable/tests/: test_iterable_connector.py
csv/: .gitignore  README.md  config.jsonc  csv_connector.py  dummy_config.jsonc  pyproject.toml  temp.py
csv/csv_connector/: __init__.py  __main__.py  main.py  models.py
csv/src/: main.py
csv/tests/: example1.csv  orders.csv  test_csv_connector.py
iterable/: .gitignore  README.md  iterable_connector.py  pyproject.toml
iterable/data/: sample_input.jsonl
iterable/iterable_connector/: main.py  models.py
iterable/src/: main.py  models.py
iterable/tests/: test_iterable_connector.py
snowflake/: README.md  pyproject.toml
snowflake/snowflake/: main.py  models.py
snowflake/snowflake_connector/: main.py
snowflake/src/: main.py
snowflake/tests/: test_snowflake_connector.py
test/: README.md
