[tool.poetry]
name = "csv-connector"
version = "0.1.0"
description = "A simple CSV connector following the Snowpilot Connector specification"
authors = ["SnowPilotOrg"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
