[tool.poetry]
name = "csv-connector"
version = "0.1.0"
description = "A simple CSV connector following the Snowpilot Connector specification"
authors = ["SnowPilotOrg"]
license = "MIT"
packages = [
    { include = "csv_connector" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
json-with-comments = "^1.2.7"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
discover = "csv_connector:discover"
extract = "csv_connector:extract"
load = "csv_connector:load"