[tool.poetry]
name = "iterable-connector"
version = "0.1.0"
description = "A simple Iterable connector following the Snowpilot Connector specification"
authors = ["SnowPilotOrg"]
license = "MIT"

[tool.poetry.scripts]
discover = "iterable_connector:discover"
extract = "iterable_connector:extract"
load = "iterable_connector:load"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
httpx = "^0.27.0"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
